tests/errors/well-formed/too-many-params.fil
comp Foo[W]<'G:1>() -> () {}
comp Bar<'G:1>() -> () {
  f := new Foo[10, 15]<'G>();
}